Criando formulário e estilizando layout do main

--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
             <button>comprar ebook</button>
         </div>
     </header>
+    <main class="main__container">
+        <p class="main__container__call-to-action">Seja bem-vindo a <br>
+            sua melhor newsletter</p>
+        <p class="main__container__paragraph">Fique por dentro de todas a novidades</p>
+
+        <span>Preencha os campos para receber as notícias sobre programação</span>
+
+        <form>
+            <div class="form__input-group">
+                <label for="name">Nome</label>
+                <input type="text" id="name">
+            </div>
+            <div class="form__input-group">
+                <label for="email">E-mail</label>
+                <input type="email" id="email">
+            </div>
+            <button type="submit">Enviar</button>
+        </form>
+    </main>
 </body>
 
 </html>
